--- a/packages/accurapp-scripts/package.json
+++ b/packages/accurapp-scripts/package.json
@@ -26,7 +26,10 @@
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
     "babel-loader": "7.0.0-alpha.3",
-    "babel-preset-react-app": "^2.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-latest": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
@@ -59,8 +62,7 @@
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "2.0.2"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "optionalDependencies": {
     "fsevents": "1.0.17"
   }
